Fri Feb 19 15:16:49 UTC 2010  jeff Parsons  <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:

          Removed unused variable 'dt_name'.

        * TAO_IDL/fe/fe_component_header.cpp:
        * TAO_IDL/fe/fe_extern.cpp:
        * TAO_IDL/fe/fe_home_header.cpp:
        * TAO_IDL/fe/fe_init.cpp:
        * TAO_IDL/fe/fe_interface_header.cpp:
        * TAO_IDL/fe/fe_obv_header.cpp:
        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/lex.yy.cpp:
        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/include/utl_tmpl/UTL_Scope_T.cpp:
        * TAO_IDL/util/utl_global.cpp:
        * TAO_IDL/util/utl_scope.cpp:
        * TAO_IDL/ast/ast_attribute.cpp:
        * TAO_IDL/ast/ast_check.cpp:

          Reordered #includes to eliminate a circular dependency
          introduced by the addition of the template source file
          UTL_Scope_T.cpp.

Fri Feb 19 12:54:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_dds_exs.cpp:

          Generate an additional boolean that is used to indicate
          whether we have a fixed or non fixed type

Fri Feb 19 08:53:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:

          Always generate the state connector header, this needs more tweaks
          in the near future

Thu Feb 18 22:53:29 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_root.h:
        * TAO_IDL/include/ast_valuebox.h:
        * TAO_IDL/include/ast_module.h:
        * TAO_IDL/include/ast_union_label.h:
        * TAO_IDL/include/ast_union.h:
        * TAO_IDL/include/ast_interface_fwd.h:
        * TAO_IDL/include/ast_structure.h:
        * TAO_IDL/include/ast_component_fwd.h: