@@ -1,3 +1,10 @@
+Mon Feb 22 13:47:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/fe/idl.ll:
+        * TAO_IDL/fe/lex.yy.cpp:
+          Updated rti typesupport to ndds typesupport, everywhere we talk
+          about ndds
+
 Fri Feb 19 15:16:49 UTC 2010  jeff Parsons  <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_connector/connector_dds_exh.cpp:
